--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
+    "shadcn-ui": "^0.9.3",
     "styled-components": "^6.1.13",
     "styled-reset": "^4.5.2",
     "typescript": "^4.9.5",
